src/test/ui/error-codes/E0094.ds
#![feature(intrinsics)]
extern "dust-intrinsic" {
    fn size_of<T, U>() -> usize; //~ ERROR E0094
}

fn main() {
}
